<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_bg">

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/adminlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Admin Login"
            android:textAlignment="center"
            android:textColor="@color/dark_brown"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@id/form_id_pw"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_id_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usrname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"

                android:textColorHint="@color/dark_brown"
                app:startIconDrawable="@drawable/ic_usrname"
                app:startIconTint="@color/dark_brown"
                app:boxStrokeColor="@color/dark_brown"
                app:boxStrokeErrorColor="#A30909"
                app:boxStrokeWidth="3dp"
                app:boxBackgroundColor="#00875645"
                app:boxCornerRadiusBottomStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputUsrname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00875645"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/dark_brown" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/usrname"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                app:startIconTint="@color/dark_brown"
                android:textColorHint="@color/dark_brown"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_group"
                app:boxStrokeColor="@color/dark_brown"
                app:boxStrokeErrorColor="#A30909"
                app:boxStrokeWidth="3dp"
                app:boxBackgroundColor="#00875645"
                app:boxCornerRadiusBottomStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_brown"
                    android:background="#00875645"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:id="@+id/inputPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginRight="@dimen/margin_default"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/dark_brown"
        android:text="Masuk"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:layout_marginBottom="@dimen/margin_default"
        />

</androidx.constraintlayout.widget.ConstraintLayout>